# seo-monitor

./: .env.example  .gitignore  GEMINI.md  README.md  pyproject.toml
docs/designs/: config.md
src/seo_monitor/: config.py
tests/: test_config.py
