[project]
name = "seo-monitor"
version = "0.1.0"
description = "Self-hosted SEO health monitoring tool for WordPress sites"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [
    { name = "Tianyi" }
]
keywords = ["seo", "monitoring", "wordpress", "crawler"]

# Runtime dependencies — installed in production
dependencies = [
    "httpx>=0.28.0",           # Async HTTP client for crawling
    "selectolax>=0.3.21",      # Fast HTML parser (Rust-based)
    "sqlalchemy>=2.0.36",      # ORM for SQLite
    "typer>=0.15.0",           # CLI framework
    "python-dotenv>=1.0.1",    # Load .env files
    "pydantic>=2.10.0",        # Data validation
    "pydantic-settings>=2.7.0",# Settings management from env
    "rich>=13.9.0",            # Pretty terminal output
    "tenacity>=9.0.0",         # Retry logic for network calls
]

[project.scripts]
# Exposes `seo-monitor` command after install
seo-monitor = "seo_monitor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seo_monitor"]

# ==========================================
# Development dependencies
# ==========================================
[dependency-groups]
dev = [
    "ruff>=0.8.0",             # Linter + formatter (Rust-based, very fast)
    "pytest>=8.3.0",           # Testing framework
    "pytest-asyncio>=0.25.0",  # Async test support
    "pytest-cov>=6.0.0",       # Coverage reporting
    "mypy>=1.13.0",            # Optional static type checking
]

# ==========================================
# Ruff: linter + formatter config
# ==========================================
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (common bugs)
    "UP",   # pyupgrade (modernize syntax)
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # Line too long (formatter handles this)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow `assert` in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ==========================================
# Pytest config
# ==========================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

# ==========================================
# Mypy config (optional, for later)
# ==========================================
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true